--- a/font_862739_8jzzajz0m48/demo_fontclass.html
+++ b/font_862739_8jzzajz0m48/demo_fontclass.html
@@ -103,6 +103,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-shouye"></i>
+                    <div class="name">首页</div>
+                    <div class="fontclass">.icon-shouye</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-gouwuche"></i>
                     <div class="name">购物车</div>
                     <div class="fontclass">.icon-gouwuche</div>
