--- a/font_862739_8jzzajz0m48/demo_symbol.html
+++ b/font_862739_8jzzajz0m48/demo_symbol.html
@@ -149,6 +149,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-shouye"></use>
+                    </svg>
+                    <div class="name">首页</div>
+                    <div class="fontclass">#icon-shouye</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-gouwuche"></use>
                     </svg>
                     <div class="name">购物车</div>
