--- a/font_862739_8jzzajz0m48/demo_unicode.html
+++ b/font_862739_8jzzajz0m48/demo_unicode.html
@@ -123,6 +123,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe61f;</i>
+                    <div class="name">首页</div>
+                    <div class="code">&amp;#xe61f;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe657;</i>
                     <div class="name">购物车</div>
                     <div class="code">&amp;#xe657;</div>
