--- a/login.html
+++ b/login.html
@@ -121,7 +121,7 @@
             </div>
         </div>
     </div>
-    <script src="js/ajax.js"></script>
+    <script src="js/ajax2.0.1.js"></script>
     <script src="js/cookie.js"></script>
     <script src="js/login.js"></script>
     <script>
