--- a/register.html
+++ b/register.html
@@ -102,7 +102,7 @@
         </div>
     </div>
 </body>
-<script src="js/ajax.js"></script>
+<script src="js/ajax2.0.1.js"></script>
 <script src="js/cookie.js"></script>
 <script src="js/register.js"></script>
 <script>
