--- a/index.html
+++ b/index.html
@@ -992,9 +992,58 @@
                             <div class="box-subtit">发现品质生活</div>
                         </a>
                     </div>
-                    <div class="box-bd"></div>
+                    <div class="box-bd">
+                        <div class="chosen-wrapper">
+                            <ul class="chosen-list clear-fix">
+                                <li class="chosen-item">
+                                    <a href="#">
+                                        <div class="chosen-item-img">
+                                            <img src="images/chosen1.webp" alt="">
+                                        </div>
+                                        <span class="chosen-item-tit">小米8周年旗舰手机</span>
+                                        <span class="chosen-item-subtit">
+                                            作为小米8周年的旗舰手机，它有着黑色的典雅玻璃机身，搭载超强性能骁龙845处理器，配合6GB+256GB的超大内存，轻松应对所有使用情况，还配有双频GPS系统，有效改善定位精准度。
+                                        </span>
+                                    </a>
+                                </li>
+                                <li class="chosen-item">
+                                    <a href="#">
+                                        <div class="chosen-item-img">
+                                            <img src="images/chosen2.webp" alt="">
+                                        </div>
+                                        <span class="chosen-item-tit">美的变频圆柱柜机</span>
+                                        <span class="chosen-item-subtit">
+                                            美的变频圆柱柜空调机，3匹的运行能力，一分钟即可将风口温度调至18℃。全维立体式送风形式，增加了出风口的面积，舒适的风可均匀送至房间的各个角落。
+                                        </span>
+                                    </a>
+                                </li>
+                                <li class="chosen-item">
+                                    <a href="#">
+                                        <div class="chosen-item-img">
+                                            <img src="images/chosen3.webp" alt="">
+                                        </div>
+                                        <span class="chosen-item-tit">晚白 蕾丝连衣裙</span>
+                                        <span class="chosen-item-subtit">
+                                            这款收腰连衣裙整体休闲不失正式，不管是上班还是出街约会都能为你加分满满。下摆细密的走边踩线，考究精密做工，体现它的优质与贴心。上部采用同色蕾丝拼接，让连衣裙散发新的时尚。
+                                        </span>
+                                    </a>
+                                </li>
+                                <li class="chosen-item">
+                                    <a href="#">
+                                        <div class="chosen-item-img">
+                                            <img src="images/chosen4.webp" alt="">
+                                        </div>
+                                        <span class="chosen-item-tit">小天鹅静音波轮洗衣机</span>
+                                        <span class="chosen-item-subtit">
+                                            采用直驱变频好电机，使洗衣更加高效节能，并且长久耐用，大容量的空间，各种大件和全家的换洗衣物都能一次洗净无残留，就是二胎的到来也能从容面对洗衣问题。
+                                        </span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                <div class="box coupon box-last">
+                <div class="box huiguang box-last">
                     <div class="box-hd">
                         <a href="#" class="box-hd-lk">
                             <h3 class="box-tit">会逛</h3>
@@ -1002,7 +1051,30 @@
                             <div class="box-subtit">你想逛的都在这里</div>
                         </a>
                     </div>
-                    <div class="box-bd"></div>
+                    <div class="box-bd">
+                        <div class="huiguang-cover">
+                            <a href="#">
+                                <img src="images/huiguang1.webp" alt="">
+                            </a>
+                        </div>
+                        <div class="huiguang-list">
+                            <div class="huiguang-item">
+                                <a href="#">
+                                    <img src="images/huiguang2.webp" alt="">
+                                </a>
+                            </div>
+                            <div class="huiguang-item">
+                                <a href="#">
+                                    <img src="images/huiguang3.webp" alt="">
+                                </a>
+                            </div>
+                            <div class="huiguang-item">
+                                <a href="#">
+                                    <img src="images/huiguang4.webp" alt="">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -1031,7 +1103,7 @@
         $('header').load('headbottom.html header');
         $('.shortcut').load('headbottom.html .shortcut');
         $('.middlehd').load('headbottom.html .middlehd');
-        $('footer').load('headbottom.html footer');
+        $('footer').load('headbottom.html .footer');
         $(document).ready(function(){
             $("li:has(.drop-layer)").on('mouseenter',function(event){
                 $(this).find('.drop-layer').toggleClass('active');
