--- a/shopcar.html
+++ b/shopcar.html
@@ -164,6 +164,14 @@
         $('.shortcut-mod .grid-cl').load('header.html .shortcut');
         $('.mod-head-mod .grid-cl').load('header.html .mod-head');
         $('footer .grid-cl').load('header.html .footer');
+        $(document).ready(function(){
+            $("li:has(.drop-layer)").on('mouseenter',function(event){
+                $(this).find('.drop-layer').toggleClass('active');
+            })
+            $("li:has(.drop-layer)").on('mouseleave',function(event){
+                $(this).find('.drop-layer').toggleClass('active');
+            })
+        })
     </script>
 </body>
 </html>
