--- a/headbottom.html
+++ b/headbottom.html
@@ -222,8 +222,8 @@
         </div>
     </div>
     <!-- 中间头部分 end-->
-        <!-- 页面底部分 start-->
-    <footer>
+    <!-- 页面底部分 start-->
+    <div class="footer">
         <!-- 帮助模块 -->
         <div class="service">
             <div class="w">
@@ -394,15 +394,15 @@
                 <a href="#" class="copyright_ico copyright_ico_5">网络举报APP下载</a>
             </p>
         </div>
-    </footer>
+    </div>
     <!-- 页面底部分 end-->
     <script src="js/jquery.js"></script>
     <script>
         $("li:has(.drop-layer)").on('mouseenter',function(event){
-                $(this).find('.drop-layer').toggleClass('active');
+            $(this).find('.drop-layer').toggleClass('active');
         })
         $("li:has(.drop-layer)").on('mouseleave',function(event){
-                $(this).find('.drop-layer').toggleClass('active');
+            $(this).find('.drop-layer').toggleClass('active');
         })
     </script>
 </body>
