--- a/shoplist.html
+++ b/shoplist.html
@@ -124,7 +124,9 @@
             </div>
         </div>
     </div>
-    <footer></footer>
+    <footer>
+        <div class="grid-cl"></div>
+    </footer>
     <script>
         var $str = document.querySelector('.timeline-hd').firstElementChild;
         function getNowTime() {
@@ -200,7 +202,15 @@
     <script>
         $('.shortcut-mod .grid-cl').load('header.html .shortcut');
         $('.mod-head-mod .grid-cl').load('header.html .mod-head');
-        $('footer').load('header.html footer');
+        $('footer .grid-cl').load('header.html .footer');
+        $(document).ready(function(){
+            $("li:has(.drop-layer)").on('mouseenter',function(event){
+                $(this).find('.drop-layer').toggleClass('active');
+            })
+            $("li:has(.drop-layer)").on('mouseleave',function(event){
+                $(this).find('.drop-layer').toggleClass('active');
+            })
+        })
     </script>
 </body>
 </html>
